checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000457647.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#26: 
  CC [M]  sound/pci/hda/hda_intel.o
                    ^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#27: 
sound/pci/hda/hda_intel.c:1508: error: position_fix_list causes a section type conflict
          ^^^

WARNING:HOTPLUG_SECTION: Using __devinitdata is unnecessary
#44: FILE: sound/pci/hda/hda_intel.c:1508:
+static struct snd_pci_quirk position_fix_list[] __devinitdata = {

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000457647.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 3 warnings, 0 checks, 8 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000457647.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
